# VOLT

./: .gitignore  .gitkeep  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO.md  structure.md
src/: TradingBot.cpp  TradingBot.h  tests.cpp
src/APIs/market/: Analysis.cpp  QueryYahoo.cpp  YahooAPI.cpp  YahooFinance.cpp  market.h
src/APIs/news/: news.h
src/APIs/scrapping/: Yahoo.cpp  scrapping.h
src/services/collectors/market/: Frame.cpp  TradingView.cpp  Yahoo.cpp  cnn.cpp  links.md  market.h  market.hpp  wss.cpp
src/services/collectors/news/: Article.cpp  fed.cpp  news.h  news.hpp  rss.cpp  wss.cpp  yahoo.cpp  yahoo_rss.cpp
src/utils/: IPC.hpp  Scheduler.cpp  Scheduler.hpp  datetime.cpp  ipc.hpp  json_handler.cpp  json_utils.cpp  markup.cpp  misc.cpp  protocol.h  unix_timestamp_converter.cpp  utils.h  utils.hpp  xml_utils.cpp
